@@ -84,6 +84,30 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Matcher
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Pattern
+import|;
+end_import
+
+begin_import
+import|import
 name|javax
 operator|.
 name|servlet
@@ -1035,15 +1059,103 @@ name|String
 name|origin
 parameter_list|)
 block|{
-return|return
+if|if
+condition|(
 name|allowAllOrigins
-operator|||
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+for|for
+control|(
+name|String
+name|allowedOrigin
+range|:
 name|allowedOrigins
+control|)
+block|{
+if|if
+condition|(
+name|allowedOrigin
 operator|.
 name|contains
 argument_list|(
+literal|"*"
+argument_list|)
+condition|)
+block|{
+name|String
+name|regex
+init|=
+name|allowedOrigin
+operator|.
+name|replace
+argument_list|(
+literal|"."
+argument_list|,
+literal|"\\."
+argument_list|)
+operator|.
+name|replace
+argument_list|(
+literal|"*"
+argument_list|,
+literal|".*"
+argument_list|)
+decl_stmt|;
+name|Pattern
+name|p
+init|=
+name|Pattern
+operator|.
+name|compile
+argument_list|(
+name|regex
+argument_list|)
+decl_stmt|;
+name|Matcher
+name|m
+init|=
+name|p
+operator|.
+name|matcher
+argument_list|(
 name|origin
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|m
+operator|.
+name|matches
+argument_list|()
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|allowedOrigin
+operator|.
+name|equals
+argument_list|(
+name|origin
+argument_list|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+return|return
+literal|false
 return|;
 block|}
 DECL|method|areHeadersAllowed (String accessControlRequestHeaders)
