@@ -426,7 +426,122 @@ name|filter
 operator|.
 name|isOriginAllowed
 argument_list|(
-literal|"example.org"
+literal|"example.com"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testPatternMatchingOrigins ()
+specifier|public
+name|void
+name|testPatternMatchingOrigins
+parameter_list|()
+throws|throws
+name|ServletException
+throws|,
+name|IOException
+block|{
+comment|// Setup the configuration settings of the server
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|conf
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|put
+argument_list|(
+name|CrossOriginFilter
+operator|.
+name|ALLOWED_ORIGINS
+argument_list|,
+literal|"*.example.com"
+argument_list|)
+expr_stmt|;
+name|FilterConfig
+name|filterConfig
+init|=
+operator|new
+name|FilterConfigTest
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+comment|// Object under test
+name|CrossOriginFilter
+name|filter
+init|=
+operator|new
+name|CrossOriginFilter
+argument_list|()
+decl_stmt|;
+name|filter
+operator|.
+name|init
+argument_list|(
+name|filterConfig
+argument_list|)
+expr_stmt|;
+comment|// match multiple sub-domains
+name|Assert
+operator|.
+name|assertFalse
+argument_list|(
+name|filter
+operator|.
+name|isOriginAllowed
+argument_list|(
+literal|"example.com"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertFalse
+argument_list|(
+name|filter
+operator|.
+name|isOriginAllowed
+argument_list|(
+literal|"foo:example.com"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|filter
+operator|.
+name|isOriginAllowed
+argument_list|(
+literal|"foo.example.com"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|filter
+operator|.
+name|isOriginAllowed
+argument_list|(
+literal|"foo.bar.example.com"
 argument_list|)
 argument_list|)
 expr_stmt|;
